@@ -1,4 +1,9 @@
 --------------------------------------------------------------------------------
+drkns 2025-09-21 18:06:25+01:00 - build 6563
+
+1. Exception handling improvements.
+
+--------------------------------------------------------------------------------
 drkns 2025-09-21 15:41:04+01:00 - build 6562
 
 1. gh-939: Set ECSTATE_SAVED only when the file was saved by the user.
